# shellglass

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  README.md  build.rs  config.example.toml  config.kitty.toml
.github/workflows/: ci.yml  docker.yml  release.yml
crates/vt100/: Cargo.toml
crates/vt100/src/: attrs.rs  callbacks.rs  cell.rs  grid.rs  lib.rs  parser.rs  perform.rs  row.rs  screen.rs  term.rs
crates/vt100/tests/: attr.rs  cell_data.rs  csi.rs  escape.rs  image.rs  mode.rs  osc.rs
docs/: roadmap.md
examples/: glyphs.sh  showcase.sh
src/: ansi.rs  apictl.rs  cli.rs  client.rs  config.rs  diff.rs  embed.js  fonts.rs  hub.rs  images.rs  live.rs  main.rs  model.rs  parse.rs  proto.rs  pty.rs  render.rs  server.rs  ssh.rs  template.html  template_embed.html  tmux.rs
viewer/: bench.html  bench.py  package-lock.json  package.json  tsconfig.json  verify.html  verify.py  viewer.test.ts  viewer.ts
